<resources>
    <string name="app_name">NorthAthleticField</string>
    <string name="login_image">登录logo</string>
    <string name="hint_username">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="login_fail_mismatch">用户名或密码错误</string>
    <string name="remember_password">记住密码</string>

    <string name="attendance_view">出勤情况</string>
    <string name="search_view">信息查询</string>
    <string name="person_view">个人中心</string>

    <string name="des_selected">tab选中状态</string>
    <string name="des_background">tab背景</string>

    <string name="check">签到</string>
    <string name="goto_check">去签到</string>
    <string name="checked">已签到</string>
    <string name="checked_hint">已经签过到了，么么哒</string>

    <string name="search">搜索</string>
    <string name="hint_search">在此输入查询的内容</string>
    <string name="des_search_logo">搜索logo</string>
    <string name="request_error">访问错误，请检查网络</string>
    <string name="data_update">数据已更新</string>

    <string name="des_head_portrait">用户头像</string>
    <string name="basic_information">基础信息</string>
    <string name="des_category">信息种类logo</string>
    <string name="task_information">任务信息</string>
    <string name="month_progress">本月进度</string>
    <string name="task_progress">任务进度</string>

    <string name="name">姓名：</string>
    <string name="phone">手机：</string>
    <string name="hint_phone">在此输入手机号</string>
    <string name="email">邮箱：</string>
    <string name="hint_email">在此输入邮箱</string>
    <string name="dept">部门：</string>
    <string name="hint_dept">在此输入部门名称</string>
    <string name="job">职位：</string>
    <string name="qq">QQ：</string>
    <string name="hint_qq">在此输入QQ号</string>
    <string name="hobby">爱好：</string>
    <string name="hint_hobby">在此输入爱好</string>
    <string name="birthday">生日：</string>
    <string name="save">保存</string>

    <string name="employee_info">详细信息</string>
</resources>
