<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/head_portrait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|start"
        android:layout_marginStart="25dp"
        android:contentDescription="@string/des_head_portrait"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="3dp"
            android:background="@color/black" />

        <Button
            android:id="@+id/goto_check"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/check"
            android:text="@string/goto_check" />
    </LinearLayout>

</LinearLayout>